RESOLVED FIXED217186
REGRESSION(r267249): Crash in WebPage::updatePreferences() when libwebrtc is not available.
https://bugs.webkit.org/show_bug.cgi?id=217186
Summary REGRESSION(r267249): Crash in WebPage::updatePreferences() when libwebrtc is ...
Jer Noble
Reported 2020-10-01 12:34:54 PDT
REGRESSION(r267249): Crash in WebPage::updatePreferences() when libwebrtc is not available.
Attachments
Patch (2.91 KB, patch)
2020-10-01 12:42 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2020-10-01 12:35:36 PDT
Jer Noble
Comment 2 2020-10-01 12:42:37 PDT
Jer Noble
Comment 3 2020-10-01 13:01:54 PDT
Note You need to log in before you can comment on or make changes to this bug.