Cherry-pick r267848. rdar://problem/69862200

REGRESSION(r267249): Crash in WebPage::updatePreferences() when libwebrtc is not available.
    https://bugs.webkit.org/show_bug.cgi?id=217186
    <rdar://problem/69817170>

    Reviewed by Eric Carlson.

    Always check for the presence of libwebrtc before calling into it.

    * platform/mediastream/libwebrtc/LibWebRTCProviderCocoa.cpp:
    (WebCore::LibWebRTCProvider::setH264HardwareEncoderAllowed):
    (WebCore::LibWebRTCProviderCocoa::createDecoderFactory):
    (WebCore::LibWebRTCProviderCocoa::createEncoderFactory):
    (WebCore::LibWebRTCProviderCocoa::setActive):

    Canonical link: https://commits.webkit.org/229967@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267848 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/229794.5@safari-611.1.2-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611.1.2-branch@267861 268f45cc-cd09-0410-ab3c-d52691b4dbfc